--- a/tryagain.html
+++ b/tryagain.html
@@ -28,6 +28,11 @@
             </h4>
         </div>
         <br />
+        <div class="topbar">
+            <h4 style="color: white;">IQ : <h4 id="IQ" style="color: rgb(228, 241, 40);"></h4>
+            </h4>
+        </div>
+        <br />
         <Button class="quizbutton" id="tryagain" type="submit" onclick="tryagain()">Try Again</Button><br /><br />
         <Button class="quizbutton" id="homepage" type="submit" onclick="homepage()">Back To Home</Button><br /><br />
     </div>
