--- a/tryagaingeneral.html
+++ b/tryagaingeneral.html
@@ -30,6 +30,7 @@
 
     <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.9.1/firebase-firestore.js"></script>
     <script src="./index.js"></script>
 
 </body>
