--- a/typequiz.html
+++ b/typequiz.html
@@ -20,7 +20,7 @@
         <br /><br />
         <input onclick="Maths()" type="submit" name="Submit" value="Math Quiz">
         <br /><br />
-        <input onclick="Fun()" type="submit" name="Submit" value="Fun Quiz">
+        <input onclick="Fun()" type="submit" name="Submit" value="General Quiz">
     </div>
 
 
